[ADD] ParkingServiceTest : add unit tests